--- a/meta/css/src/solarized-css/partials/elements.styl
+++ b/meta/css/src/solarized-css/partials/elements.styl
@@ -32,7 +32,7 @@ h2,h3,h4,h5,h6
   color: $green
 
 pre
-  background-color: $bg
+  background-color: $bgsrc
   color: $fg
   border: 1pt solid $comment
   padding: 1em
