--- a/meta/css/src/solarized-css/partials/solarized-colors.styl
+++ b/meta/css/src/solarized-css/partials/solarized-colors.styl
@@ -1,18 +1,19 @@
 // EnigmaCurry modified palette
 
-$base03 =  #002b36
-$base02 =  #073642
+$base03 =  #181822
+$base02 =  #13191c
 $base01 =  #586e75
 $base00 =  #657b83
-$base0 =   #d3fdcd
+$base0 =   #e1ffdd
 $base1 =   #93a1a1
 $base2 =   #eee8d5
 $base3 =   #fdf6e3
+$bgsrc =   #141415
 
 $yellow =  #ffd759
 $orange =  #ff9f59
 $red =     #dc322f 
-$magenta = #ff84bf 
+$magenta = #f788bd 
 $violet =  #6c71c4 
 $blue =    #268bd2 
 $cyan =    #2aa198 
